--- a/Flexbox.html
+++ b/Flexbox.html
@@ -7,6 +7,10 @@
     <style>
         .container {
             display: flex; /* Flexboxを有効にし、簡単に横並びにできる。 */;
+            flex-direction: row;  /* 初期値 右から左へ */
+            /* flex-direction: row-reverse; */ /* 左から右へ */ 
+            /* flex-direction: column; /* 上から下へ */
+            /* flex-direction: column-reverse; /* 下から上へ */
         }
         .item {
             background-color: #ffa61c;
@@ -51,6 +55,36 @@
         <li><code>flex-basis</code>：アイテムの初期サイズを指定します。</li>
         <li><code>align-self</code>：特定のアイテムの縦方向の配置を指定します。</li>
     </ul>
+
+    <br><br><br><br><br><hr>
+
+    <h1>flex-directionプロパティ</h1>
+
+    <ul>
+        <li>row (初期値) 右から左へ 1 → 5</li>
+        <li>row-reverce 左から右へ 5 ← 1</li>
+        <li>column 上から下へ 1 ↓ 4</li>
+        <li>column-reverce 下から上へ 4 ↑ 1</li>
+    </ul>
+
+    <table border="1">
+        <tr>
+            <td>row (初期値) </td>
+            <td>右から左へ 1 → 5</td>
+        </tr>
+        <tr>
+            <td>row-reverce</td>
+            <td>左から右へ 5 ← 1</td>
+        </tr>
+        <tr>
+            <td>column</td>
+            <td>上から下へ 1 ↓ 4</td>
+        </tr>
+        <tr>
+            <td>column-reverce</td>
+            <td>下から上へ 4 ↑ 1</td>
+        </tr>
+    </table>
     
 </body>
 </html>
