--- a/Flexbox.html
+++ b/Flexbox.html
@@ -180,7 +180,7 @@
     <h1>align-itemsプロパティ</h1>
     <p>align-itemsプロパティで、子要素の垂直方向の揃えを指定できるようになる。</p>
 
-    <table>
+    <table border="1">
         <tr>
             <td>stretch</td>
             <td>要素の高さを揃える（デフォルトで有効）</td>
