--- a/Flexbox.html
+++ b/Flexbox.html
@@ -198,7 +198,7 @@
             <td>中央ぞろえ（親要素の高さ内で）</td>
         </tr>
         <tr>
-            <td>baseline（初期値）</td>
+            <td>baseline</td>
             <td>テキストのベースラインに揃える（文字の最下部が揃う）</td>
         </tr>
     </table>
