--- a/Flexbox.html
+++ b/Flexbox.html
@@ -42,6 +42,11 @@
             /* align-content: center; /* 中央揃え */
             /* align-content: space-between;  */
             align-content: space-around;
+
+
+            /* flex-flow: row nowrap; /* 初期値 flex-directionとflex-wrapをまとめて指定 */
+            /* flex-flow: row-reverse wrap; /* 右から左へ 且つ 折り返して上から下へ */
+            flex-flow: row wrap; /* 左から右へ 且つ 折り返して上から下へ */
         }
         .item {
             background-color: #ffa61c;
@@ -249,5 +254,13 @@
             <td>要素間を均等に配置、両端はアイテムの半分の余白を配置</td>
         </tr>
     </table>
+    <br><br><br><br><br><hr>
+    <h1>flex-flowプロパティ</h1>
+    <p>flex-flowプロパティで、flex-directionとflex-wrapをまとめて指定できるようになる。</p>
+    <p>flex-flow: <span style="text-decoration:underline blue;">row</span> <span style="text-decoration: underline orange;">nowrap</span></p>
+    <p style="margin-left: 10px;"><span style="color: blue;">flex-direction</span> <span style="color: orange;">flex-wrap</span></p>
+    <br>
+    <p>初期値は row と nowrap で、flex-directionプロパティがrowで左から右へ、flex-wrapプロパティがnowrapで一列に並ぶ。</p>
+    <p>色々な組み合わせが可能だが、例えば、row-reverseとwrapの場合は、flex-directionプロパティがrow-reverseで右から左へ並び、flex-wrapプロパティがwrapで上から下へ折り返す。</p>
 </body>
 </html>
