--- a/Flexbox.html
+++ b/Flexbox.html
@@ -100,15 +100,15 @@
 
     <br><br><br><br><br>
 
-    <h1>以下自動入力につき</h1>
-    <h2>Flexコンテナーのプロパティ</h2>
+    <h2>※ 以下自動入力につき</h2>
+    <h3>Flexコンテナーのプロパティ</h3>
     <ul>
         <li><code>flex-direction</code>：アイテムの並び方向を指定します。</li>
         <li><code>justify-content</code>：アイテムの横方向の配置を指定します。</li>
         <li><code>align-items</code>：アイテムの縦方向の配置を指定します。</li>
         <li><code>flex-wrap</code>：アイテムがコンテナーの幅を超えた場合の折り返しを指定します。</li>
     </ul>
-    <h2>Flexアイテムのプロパティ</h2>
+    <h3>Flexアイテムのプロパティ</h3>
     <ul>
         <li><code>order</code>：アイテムの表示順序を指定します。</li>
         <li><code>flex-grow</code>：アイテムの伸縮性を指定します。</li>
